# Ozone_AI

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  server.py  test.py
Agents/: factCheckerAgent.py  mediaAnalyzerAgent.py  misinfoAgent.py  model_factory.py  neo4j_tools.py  politicalBiasAgent.py  prompts.py  rate_limit_utils.py  reportGeneratorAgent.py  search_utils.py  sourceAnalyzerAgent.py  statementExtractorAgent.py  verdictSynthesizerAgent.py
extension/: README.md  background.js  build.js  content-old.css  content-old.js  content.css  content.js  generate-icons.js  manifest.json  package-lock.json  package.json  popup-old.html  popup-old.js  popup.html  popup.js
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AuthDialog.tsx  DiscoverFeed.tsx  NetworkVisualizer.tsx  SearchInterface.tsx  SearchResult.tsx  Sidebar.tsx  SourcesModal.tsx  sourcesData.ts
frontend/src/components/ui/: dialog.tsx
frontend/src/contexts/: AuthContext.tsx  LanguageContext.tsx  ThemeContext.tsx
frontend/src/lib/: supabase.ts
frontend/src/lib/services/: emailService.ts  misinformationService.ts  twilioService.ts
frontend/src/pages/: Account.tsx  BrandOnboard.tsx  Index.tsx  Main.tsx  Pricing.tsx
