[project]
name = "misinformation-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "deepagents>=0.2.8",
    "fastapi>=0.115.0",
    "fastmcp>=2.13.1",
    "langchain>=1.1.0",
    "langchain-anthropic>=1.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-mcp-adapters>=0.1.14",
    "langchain-neo4j>=0.6.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.0",
    "langgraph>=1.0.4",
    "neo4j>=5.28.2",
    "prettyprinter>=0.18.0",
    "requests>=2.31.0",
    "rich>=14.2.0",
    "tavily-python>=0.7.13",
    "uvicorn>=0.32.0",
    "websockets>=14.0",
]
